dnl Process this file with autoconf to produce a configure script.
dnl $Id: $

AC_INIT(configure.in)


#release versioning
GENERIC_MAJOR_VERSION=0
GENERIC_MINOR_VERSION=7
#GENERIC_MICRO_VERSION=4
#GENERIC_VERSION=$GENERIC_MAJOR_VERSION.$GENERIC_MINOR_VERSION.$GENERIC_MICRO_VERSION
GENERIC_VERSION=$GENERIC_MAJOR_VERSION.$GENERIC_MINOR_VERSION
AC_SUBST(GENERIC_MAJOR_VERSION)
AC_SUBST(GENERIC_MINOR_VERSION)
#AC_SUBST(GENERIC_MICRO_VERSION)
AC_SUBST(GENERIC_VERSION)

VERSION=$GENERIC_VERSION

#AC_INIT(fuppes, $GENERIC_VERSION, u-voelkel@users.sourceforge.net)
AM_INIT_AUTOMAKE(fuppes, $GENERIC_VERSION, u-voelkel@users.sourceforge.net)
AM_CONFIG_HEADER(config.h)

AC_CONFIG_HEADERS

AC_PROG_CXX
AC_PROG_CC
#AC_PROG_MAKE_SET

AC_LANG([C])
AC_LANG([C++])

dnl Checks for programs.


AC_DEFUN(PKG_CHECK_MODULES, [
  succeeded=no

  if test -z "$PKG_CONFIG"; then
    AC_PATH_PROG(PKG_CONFIG, pkg-config, no)
  fi

  if test "$PKG_CONFIG" = "no" ; then
     echo "*** The pkg-config script could not be found. Make sure it is"
     echo "*** in your path, or set the PKG_CONFIG environment variable"
     echo "*** to the full path to pkg-config."
     echo "*** Or see http://www.freedesktop.org/software/pkgconfig to get pkg-config."
  else
     PKG_CONFIG_MIN_VERSION=0.9.0
     if $PKG_CONFIG --atleast-pkgconfig-version $PKG_CONFIG_MIN_VERSION; then
        AC_MSG_CHECKING(for $2)

        if $PKG_CONFIG --exists "$2" ; then
            AC_MSG_RESULT(yes)
            succeeded=yes

            AC_MSG_CHECKING($1_CFLAGS)
            $1_CFLAGS=`$PKG_CONFIG --cflags "$2"`
            AC_MSG_RESULT($$1_CFLAGS)

            AC_MSG_CHECKING($1_LIBS)
            $1_LIBS=`$PKG_CONFIG --libs "$2"`
            AC_MSG_RESULT($$1_LIBS)
        else
            $1_CFLAGS=""
            $1_LIBS=""
            AC_MSG_RESULT([no])
        fi

        AC_SUBST($1_CFLAGS)
        AC_SUBST($1_LIBS)
     else
        echo "*** Your version of pkg-config is too old. You need version $PKG_CONFIG_MIN_VERSION or newer."
        echo "*** See http://www.freedesktop.org/software/pkgconfig";
     fi
  fi

  if test $succeeded = yes; then
     ifelse([$3], , :, [$3])
  else
     ifelse([$4], , AC_MSG_ERROR([Library requirements ($2) not met; consider 
adjusting the PKG_CONFIG_PATH environment variable if your libraries are in a 
nonstandard prefix so pkg-config can find them.]), [$4])
  fi
])


#CXXFLAGS="-DUSE_SYSLOG $CXXFLAGS"
#CXXFLAGS="-O0 -g"
#CXXFLAGS="-O3"

FUPPES_LIBS="-ldl $FUPPES_LIBS"
AC_SUBST(FUPPES_LIBS)

dnl Checks for libraries.
PKG_CHECK_MODULES(PCRE, libpcre >= 5.0)
PKG_CHECK_MODULES(LIBXML, libxml-2.0 >= 2.6.1)
PKG_CHECK_MODULES(SQLITE3, sqlite3 >= 3.2)
PTHREAD_LIBS=""
AC_CHECK_LIB(pthread, pthread_create, PTHREAD_LIBS="-lpthread")
UUID_LIBS=""
AC_CHECK_LIB(uuid, uuid_generate, UUID_LIBS="-luuid")

AC_SUBST(PTHREAD_LIBS)
AC_SUBST(UUID_LIBS)



# TAGLIB
have_taglib=no
TAGLIB_LIBS=""
TAGLIB_CFLAGS=""

if test -z "$TAGLIB_CONFIG"; then
  AC_PATH_PROG(TAGLIB_CONFIG, taglib-config, no)
fi

if test "$TAGLIB_CONFIG" = "no" ; then   
   AC_MSG_NOTICE([*** taglib support disabled ***]);
   echo "  the taglib-config script could not be found."
   echo "  taglib support disabled"   
else  
  AC_MSG_CHECKING(TAGLIB_CFLAGS)
  TAGLIB_CFLAGS=`$TAGLIB_CONFIG --cflags`
  TAGLIB_CFLAGS="$TAGLIB_CFLAGS -DHAVE_TAGLIB"
  AC_MSG_RESULT($TAGLIB_CFLAGS)
  AC_SUBST(TAGLIB_CFLAGS)
  AC_MSG_CHECKING(TAGLIB_LIBS)  
  TAGLIB_LIBS=`$TAGLIB_CONFIG --libs`
  AC_MSG_RESULT($TAGLIB_LIBS)
  AC_SUBST(TAGLIB_LIBS)
  
  have_taglib=yes
fi

# END TAGLIB


LAME_LIBS=""
TWOLAME_LIBS=""

MUSEPACK_LIBS=""
FLAC_LIBS=""
transcoding=yes

use_lame=yes
use_twolame=yes

have_encoder=no
have_lame=no
have_twolame=no

have_decoder=no
have_vorbis=no
have_mpc=no
have_flac=no

# transcoding
AC_ARG_ENABLE(transcoding,
            [  --disable-transcoding  Disable on the fly transcoding support],
            [ if test "x$enable_transcoding" = "xno" ; then
                    transcoding=no;
              fi ] )


AC_ARG_ENABLE(lame, 
            [  --disable-lame  Do not use LAME],
            [ use_lame=no; ] )
              
AC_ARG_ENABLE(twolame, 
            [  --disable-twolame  Do not use TwoLAME],
            [ use_twolame=no; ] )              


if test "x$transcoding" = "xyes"; then
  
  ENABLE_TRANSCODING="true"
  
  #
  # check for LAME
  #  
  if test "x$use_lame" = "xyes"; then
    AC_CHECK_HEADERS(lame/lame.h, have_lame=yes, have_lame=no)
    if test "x$have_lame" = "xyes"; then    
      LAME_LIBS="-lmp3lame"
      have_encoder=yes
    else
      CXXFLAGS="$CXXFLAGS -DDISABLE_LAME"
    fi
  else
    CXXFLAGS="$CXXFLAGS -DDISABLE_LAME"
  fi
  
  
  #
  # check for TwoLAME
  #
  if test "x$use_twolame" = "xyes"; then
    PKG_CHECK_MODULES(TWOLAME, twolame >= 0.3.8, have_twolame=yes, have_twolame=no)
    if test "x$have_twolame" = "xyes"; then
      have_encoder=yes
    else
      CXXFLAGS="$CXXFLAGS -DDISABLE_TWOLAME"
    fi
  else
    CXXFLAGS="$CXXFLAGS -DDISABLE_TWOLAME"
  fi
  
  
  #
  # if encoder was found check for further libs
  #
  have_decoder=no
  if test "x$have_encoder" = "xyes"; then

    # vorbis
    PKG_CHECK_MODULES(VORBISFILE, vorbisfile >= 1.0, have_vorbis=yes, have_vorbis=no)    
    if test "x$have_vorbis" = "xyes"; then      
      have_decoder=yes    
    else
      CXXFLAGS="$CXXFLAGS -DDISABLE_VORBIS"
    fi
    
    # musepack    
    AC_CHECK_HEADERS(mpcdec/config_types.h, have_mpc=yes, have_mpc=no)
    if test "x$have_mpc" = "xyes"; then      
      MUSEPACK_LIBS="-lmpcdec"
      have_decoder=yes
    else
      CXXFLAGS="$CXXFLAGS -DDISABLE_MUSEPACK"
    fi
    
    # FLAC_LIBS
    AC_CHECK_HEADERS(FLAC/file_decoder.h, have_flac=yes, have_flac=no)
    if test "x$have_flac" = "xyes"; then      
      FLAC_LIBS="-lFLAC"
      have_decoder=yes
    else
      CXXFLAGS="$CXXFLAGS -DDISABLE_FLAC"
    fi    

  fi # have_encoder

fi # transcoding = yes

AC_SUBST(LAME_LIBS)
AC_SUBST(MUSEPACK_LIBS)
AC_SUBST(FLAC_LIBS)

# has to be if not else
if test "x$transcoding" = "xno"; then
  
  ENABLE_TRANSCODING="false"
  CXXFLAGS="$CXXFLAGS -DDISABLE_TRANSCODING"
  AC_MSG_NOTICE(Transcoding disabled");     
fi
AM_CONDITIONAL(DISABLE_TRANSCODING, test x$ENABLE_TRANSCODING = xfalse)


dnl Checks for header files.
AC_HEADER_DIRENT
AC_HEADER_STDC
AC_CHECK_HEADERS([arpa/inet.h fcntl.h netdb.h netinet/in.h string.h sys/ioctl.h sys/param.h sys/socket.h unistd.h sys/utsname.h uuid/uuid.h syslog.h])

dnl Checks for typedefs, structures, and compiler characteristics.


dnl Checks for library functions.


dnl Checks for Additional stuffs.

# HTTP Port
AC_ARG_ENABLE(default-http-port,
 [  --enable-default-http-port[=PORT] Set the default HTTP port],
 [  CXXFLAGS="$CXXFLAGS -DDEFAULT_HTTP_PORT=$enableval" ])



AC_OUTPUT([
Makefile
src/Makefile
])
#include/Makefile



dnl summary

echo ""
echo "  SUMMARY"
echo ""

if test "x$transcoding" = "xyes"; then

  # no encoder
  if test "x$have_encoder" = "xno"; then
    echo "transcoding disabled"
    echo ""
    echo "no encoding library was found"
    echo "If you want transcoding install LAME and/or TwoLAME"
    echo "and run ./configure again"
    echo ""
    
    transcoding=no    
  fi

  # no decoder
  if test "x$have_decoder" = "xno"; then 
    if test "x$have_encoder" = "xyes"; then 
      echo "transcoding disabled"
      echo ""
      echo "An encoding library was found"
      echo "but there is no decoding library."
      echo "Please install the OGG/Vorbis, Musepack and/or FLAC libraries"
      echo "and run ./configure again"
      echo ""
    fi
    
    transcoding=no
  fi
    
    
  if test "x$transcoding" = "xyes"; then
  
    echo "  audio transcoding enabled"  
    echo "    encoder:"
    if test "x$have_lame" = "xyes"; then
      echo "      lame   : yes"
    else
      echo "      lame   : no"
    fi
    
    if test "x$have_twolame" = "xyes"; then
      echo "      twolame: yes"
    else  
      echo "      twolame: no"
    fi
    
      
    echo "    decoder:"
    if test "x$have_vorbis" = "xyes"; then
      echo "      vorbis : yes"
    else
      echo "      vorbis : no"      
    fi
      
    if test "x$have_mpc" = "xyes"; then
      echo "      mpc    : yes"
    else
      echo "      mpc    : no"      
    fi     
    
    if test "x$have_flac" = "xyes"; then
      echo "      flac   : yes"
    else
      echo "      flac   : no"      
    fi 
  
  fi
  
else # transcoding = yes  
  echo "  audio transcoding disabled"  
fi


# taglib
echo ""
if test "x$have_taglib"; then
  echo "  taglib support enabled"
else
  echo "  taglib support enabled"
fi


echo ""
echo "Thanks for using fuppes"
echo "please report bugs"
echo ""
